# stevelock

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  package.json  prompt.md  tsconfig.json
.github/workflows/: native-build.yml  native-release.yml  release.yml  version-bump.yml  version.yml
example/local/: host.ts  package.json
example/remote/: jail.ts  package.json
src/: cli.ts  index.ts  platform.ts
src/native/: napi.c  sp.h  stevelock.c  stevelock.h
src/native/platform/: darwin.c  linux.c
src/test/: lifecycle.c  process.c  sandbox.c
src/test/include/: sl.h
tools/: cmake.ts  format-native.ts  publish.ts  release.ts  version.ts
